--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
 	<nav class="navbar navbar-light bg-light header">
 		<span class="navbar-brand mb-0 h1">Movie Recommender</span>
 		<span class="nav-item">
-			<a class="btn btn-dark" href="http://google.com">Github</a>
+			<a class="btn btn-dark" href="ithub.com/createdbyfahad/MovieRecommender" target="_blank">Source</a>
 		</span>
 	</nav>
 	<div class="main">
